fix legend align on mobile devices

--- a/portfolio/static/portfolio/css/gallery.less
+++ b/portfolio/static/portfolio/css/gallery.less
@@ -18,6 +18,7 @@
             background-color: @white;
 
             img {
+                display: block;
                 height: 100%;
                 width:  100%;
                 max-height: 50vh;
@@ -28,7 +29,7 @@
 
             .legend {
                 position: absolute;
-                bottom: 3px; // Ugly fix for alignement on mobile
+                bottom: 0;
                 width: 100%;
                 padding: 6px 0;
                 text-align: center;
